# fastapi-xml

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  tests.yml
docs/: Makefile  conf.py  fastapi_xml.rst  modules.rst
docs/doctrees/: environment.pickle  example.doctree  fastapi_xml.doctree  index.doctree  modules.doctree
docs/html/: .buildinfo  example.html  fastapi_xml.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
fastapi_xml/: __init__.py  decoder.py  nonjson.py  openapi.py  pydantic_dataclass_patch.py  response.py  route.py  xmlbody.py
tests/: test_decoder.py  test_fastapi.py  test_openapi.py  test_openapi_xml_estension.py  test_response.py  test_route.py  test_xmlbody.py
