[tool.poetry]
name = "fastapi-xml"
version = "1.1.0"
description = "adds xml support to fastapi"
readme = "README.md"
authors = ["Leon Rendel <cercide@tuta.io>"]
maintainers = ["Leon Rendel <cercide@tuta.io>"]
repository = "https://github.com/cercide/fastapi-xml"
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Framework :: FastAPI",
]
packages = [
    { include = "fastapi_xml" },
]

[tool.poetry.dependencies]
python = ">= 3.9, < 4.0"
fastapi = ">= 0.70.0"
pydantic = ">= 2.0"
xsdata = ">= 22.9"

[tool.poetry-version-plugin]
source = "git-tag"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
