[tool.poetry]
name = "fastapi-xml"
version = "1.1.0"
description = "adds xml support to fastapi"
readme = "README.md"
authors = ["Leon Rendel <cercide@tuta.io>"]
maintainers = ["Leon Rendel <cercide@tuta.io>"]
repository = "https://github.com/cercide/fastapi-xml"
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Framework :: FastAPI",
]
packages = [
    { include = "fastapi_xml" },
]

[tool.poetry.dependencies]
python = ">= 3.9, < 4.0"
fastapi = ">= 0.113.0"
pydantic = ">= 2.0"
xsdata = ">= 22.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry-version-plugin]
source = "git-tag"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
